# rust_citadel

./: .gitignore  API_FREEZE.md  Backup-Citadel.ps1  CHECKLIST.md  CITADEL_OVERVIEW.md  COMPLIANCE_MATRIX.md  Caddyfile  Cargo.toml  Cargo.toml.bak  DEPLOYMENT.md  Dockerfile  FORMAT.md  INTEGRATION_GUIDE.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  OPEN_CORE_DECISION.md  QUICKSTART.md  README.md  SECURITY.md  SPEC.md  SUPPORT.md  THREAT_MODEL.md  Validate-Citadel.ps1  body.json  citadel-audit.jsonl  citadel-dashboard.html  citadel-dashboard.jsx  citadel-validation-20260212-103051.txt  citadel-validation-20260212-104900.txt  citadel-validation-20260212-110038.txt  citadel.rs  citadel_example.py  dashboard.html  docker-compose-production.yml  docker-compose.yml  env.example  sdk.rs  test_output.txt
.github/workflows/: ci.yml  fuzz.yml
benches/: timing.rs
citadel-api/: Cargo.toml  Cargo_api.toml
citadel-api/src/: hash_apikey.rs  main.rs
citadel-backups/: citadel-backup-20260212-142613.manifest  citadel-backup-20260212-142613.sha256
citadel-data/: citadel-audit.jsonl
citadel-envelope/benches/: comparative.rs
citadel-envelope/examples/: demo.rs
citadel-envelope/fuzz/fuzz_targets/: decode_wire.rs  decrypt_full.rs
citadel-envelope/src/: aead.rs  cli.rs  envelope.rs  error.rs  kem.rs  lib.rs  sdk.rs
citadel-envelope/tests/: kat.rs  roundtrip.rs
citadel-keystore/: Cargo.toml  Cargo.toml.workspace  Cargo.workspace.toml
citadel-keystore/src/: Validate-Citadel.ps1  audit.rs  error.rs  keystore.rs  lib.rs  policy.rs  storage.rs  threat.rs  types.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decrypt_full.rs
src/: aad.rs  cli.rs  envelope.rs  kdf.rs  lib.rs  wire.rs
tests/: kat.rs  roundtrip.rs
