[package]
name = "citadel-keystore"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Post-quantum key lifecycle management for the Citadel ecosystem"
license = "MIT OR Apache-2.0"

[lib]
name = "citadel_keystore"
path = "src/lib.rs"

[dependencies]
citadel-envelope = { path = "../citadel-envelope" }
tokio = { version = "1", features = ["sync", "fs", "io-util", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
